# see

./: Cargo.toml  README.md  pyproject.toml
docs/: API_HANDLERS_MODULARIZATION.md  API_IMPLEMENTATION_SUMMARY.md  API_NETWORK_CONFIG.md
examples/: api_dual_network.rs  api_simple_server.rs  python_api_usage.py
seesea/: pyproject.toml
seesea/seesea/: __init__.py  api.py  cli.py  search.py
seesea/seesea/browser/: __init__.py  quark.py
src/: error.rs
src/api/: metrics.rs  mod.rs  network.rs  on.rs  types.rs
src/api/handlers/: config.rs  health.rs  metrics.rs  mod.rs  search.rs  static_files.rs
src/api/middleware/: auth.rs  circuitbreaker.rs  ipfilter.rs  magiclink.rs  mod.rs  ratelimit.rs
src/python_bindings/: py_api.rs
src/rss/: ranking.rs
src/search/: engine_config.rs  engine_manager.rs  on.rs
src/search/engines/: baidu.rs  bilibili.rs  bing.rs  bing_images.rs  bing_news.rs  bing_videos.rs  mod.rs  so.rs  sogou.rs  sogou_wechat.rs
static/html/: index.html
tests/: test_python_sdk.py
