[package]
name = "SeeSea"
version = "0.3.0"
edition = "2024"

description = "SeeSea - A privacy-focused metasearch engine"

keywords = ["search", "metasearch", "rust", "privacy", "tor", "proxy", "python"]

license = "MIT"
readme = "README.md"

[lib]
name = "seesea_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
html-escape = "0.2.13"
num_cpus = "1.17.0"
proc-macro2 = { version = "1.0.103", optional = true }
quote = { version = "1.0.42", optional = true }
regex = "1.11.1"
reqwest = { version = "0.12.24", features = ["brotli", "cookies", "deflate", "gzip", "json", "rustls-tls", "stream"] }
encoding_rs = "0.8.35"
scraper = { version = "0.24.0", optional = true, features = ["default"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7"
sled = { version = "0.34.7", default-features = false }
syn = { version = "2.0.110", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

# 内部依赖 - 错误处理模块
error = { path = "src/crates/error" }
error-derive = { path = "src/crates/error-derive" }
urlencoding = "2.1.3"
bincode = { version = "2.0.1", features = ["serde"] }
tokio-rustls = "0.26.4"
trust-dns-resolver = "0.23.2"
rand = "0.9.2"
fastrand = "2.2.0"
once_cell = "1.20.2"
lazy_static = "1.5.0"
html5ever = { version = "0.36.1", optional = true }
select = { version = "0.6.1", optional = true }
futures = "0.3.31"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.11"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout", "util"] }
governor = "0.6"
dashmap = "6.1"
jsonwebtoken = "9.3"
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4", "serde"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
pyo3 = { version = "0.27.1", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"], optional = true }

[dev-dependencies]
tempfile = "3.23.0"
serial_test = "3.2.0"
temp-env = "0.3.6"

[[bin]]
name = "SeeSea"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["scraper", "html5ever"]
derive = ["proc-macro2", "quote", "syn"]
proc-macro2 = ["dep:proc-macro2"]
quote = ["dep:quote"]
syn = ["dep:syn"]
scraper = ["dep:scraper"]
html5ever = ["dep:html5ever"]
select = ["dep:select"]
python = ["pyo3", "pyo3-async-runtimes"]
pyo3 = ["dep:pyo3"]
pyo3-async-runtimes = ["dep:pyo3-async-runtimes"]
